<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="ru.vlad805.mapssharedpoints.SettingsActivity"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<TabHost
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/settings_tabHost">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<TabWidget
				android:id="@android:id/tabs"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			</TabWidget>
			<FrameLayout
				android:id="@android:id/tabcontent"
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<LinearLayout
					android:id="@+id/settings_application"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical"
					>
					<CheckBox
						android:id="@+id/settings_night"
						style="@style/App.ItemCheckbox"
						android:text="@string/SettingsNight" />
					<CheckBox
						android:id="@+id/settings_hd"
						style="@style/App.ItemCheckbox"
						android:text="@string/SettingsMapHD" />
					<CheckBox
						android:id="@+id/settings_traffic"
						style="@style/App.ItemCheckbox"
						android:text="@string/SettingsTraffic" />
					<CheckBox
						android:id="@+id/settings_location"
						style="@style/App.ItemCheckbox"
						android:text="@string/SettingsLocation" />
				</LinearLayout>
				<ScrollView
					android:id="@+id/settings_profile"
					android:padding="10dp"
					android:layout_width="match_parent"
					android:layout_height="match_parent">
					<LinearLayout
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">
						<LinearLayout
							android:orientation="vertical"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							style="@style/App.LoginItem">
							<TextView
								android:text="@string/profile_firstName"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
							<EditText
								android:id="@+id/profile_firstName"
								android:inputType="textPersonName"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
						</LinearLayout>
						<LinearLayout
							android:orientation="vertical"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							style="@style/App.LoginItem">
							<TextView
								android:text="@string/profile_lastName"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
							<EditText
								android:id="@+id/profile_lastName"
								android:inputType="textPersonName"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
						</LinearLayout>
						<LinearLayout
							android:orientation="vertical"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							style="@style/App.LoginItem">

							<TextView
								android:text="@string/profile_login"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
							<EditText
								android:id="@+id/profile_login"
								android:inputType="textNoSuggestions"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
						</LinearLayout>
						<LinearLayout
							android:orientation="vertical"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							style="@style/App.LoginItem">
							<TextView
								android:text="@string/profile_sex"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
							<RadioGroup
								android:id="@+id/profile_sex"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								<RadioButton
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:text="@string/profile_sex_female"
									android:id="@+id/profile_sex_female"/>
								<RadioButton
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:text="@string/profile_sex_male"
									android:id="@+id/profile_sex_male"/>
							</RadioGroup>
						</LinearLayout>
						<Button
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/profile_submit"
							android:text="@string/profile_save"
							style="@style/App.StyledButton" />
					</LinearLayout>
				</ScrollView>
			</FrameLayout>
		</LinearLayout>
	</TabHost>
</LinearLayout>
