<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/settings_profile"
	tools:context="ru.vlad805.mapssharedpoints.RegisterActivity"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<LinearLayout
		android:padding="10dp"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/App.LoginItem">
			<TextView
				style="@style/Theme.Standart.Label"
				android:text="@string/profile_firstName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<EditText
				style="@style/Theme.Standart.Field"
				android:id="@+id/register_firstName"
				android:inputType="textPersonName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/App.LoginItem">
			<TextView
				style="@style/Theme.Standart.Label"
				android:text="@string/profile_lastName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<EditText
				style="@style/Theme.Standart.Field"
				android:id="@+id/register_lastName"
				android:inputType="textPersonName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/App.LoginItem">
			<TextView
				style="@style/Theme.Standart.Label"
				android:text="@string/profile_sex"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<RadioGroup
				android:id="@+id/register_sex"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<RadioButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/profile_sex_female"
					android:id="@+id/register_sex_female"/>
				<RadioButton
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/profile_sex_male"
					android:id="@+id/register_sex_male"/>
			</RadioGroup>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/App.LoginItem">
			<TextView
				style="@style/Theme.Standart.Label"
				android:text="@string/profile_login"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<EditText
				style="@style/Theme.Standart.Field"
				android:id="@+id/register_login"
				android:inputType="textNoSuggestions"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/App.LoginItem">
			<TextView
				style="@style/Theme.Standart.Label"
				android:text="@string/profile_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
			<EditText
				style="@style/Theme.Standart.Field"
				android:id="@+id/register_password"
				android:inputType="textPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/register_submit"
			android:text="@string/register_do"
			style="@style/App.StyledButton" />
	</LinearLayout>
</ScrollView>